--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-streamlit
-pandas
-prophet
-matplotlib
-yfinance
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-pandas==2.0.3
-pandasql==0.7.3
-prophet==1.1.5
 streamlit==1.37.1
-yfinance==0.2.41
+pandas==2.0.3
+prophet==1.1.5
+joblib==1.2.0
+matplotlib==0.2.40
+yfinance==3.7.2
+matplotlib-inline==0.1.7
+pandasql==1.1.5
+
