--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.37.1
+streamlit==1.19.0
 pandas==2.0.3
-prophet==1.1.5
-joblib==1.4.2
+numpy==1.23.5
+prophet==1.1.0
+joblib==1.3.2
 matplotlib==3.7.2
 yfinance==0.2.40
 matplotlib-inline==0.1.7
